// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceListGroupHeaderTest render for fail instances 1`] = `
<div
  role="heading"
>
  <OutcomeChip
    count={1}
    outcomeType="fail"
  />
   
  <span
    className="rule-details-id"
  >
    <NewTabLink
      aria-describedby="ruleid-rule-description"
      aria-label="rule ruleid"
      href="help url"
    >
      ruleid
    </NewTabLink>
  </span>
  : 
  <span
    className="rule-details-description"
  >
    rule description
  </span>
   (
  <GuidanceLinks />
  )
</div>
`;

exports[`InstanceListGroupHeaderTest render for incomplete instances 1`] = `
<div
  role="heading"
>
   
  <span
    className="rule-details-id"
  >
    <NewTabLink
      aria-describedby="ruleid-rule-description"
      aria-label="rule ruleid"
      href="help url"
    >
      ruleid
    </NewTabLink>
  </span>
  : 
  <span
    className="rule-details-description"
  >
    rule description
  </span>
   (
  <GuidanceLinks />
  )
</div>
`;

exports[`InstanceListGroupHeaderTest render for pass instances 1`] = `
<div
  role="heading"
>
   
  <span
    className="rule-details-id"
  >
    <NewTabLink
      aria-describedby="ruleid-rule-description"
      aria-label="rule ruleid"
      href="help url"
    >
      ruleid
    </NewTabLink>
  </span>
  : 
  <span
    className="rule-details-description"
  >
    rule description
  </span>
   (
  <GuidanceLinks />
  )
</div>
`;
